--- a/home.css
+++ b/home.css
@@ -3,12 +3,16 @@ display: flex;
 flex-direction: column;
 justify-content: center;
 align-items: center;
-padding-top: 100px;
-padding-bottom: 120px;
+padding-top: 70px;
+padding-bottom: 10%;
+padding-left: 5%;
+padding-right: 5%;
+ipadding-top: 100px;
+ipadding-bottom: 120px;
 ibackground-color: pink;
 }
 
 #pic {
-width: 600px;
-max-width: 100%;
+width: 100%;
+max-width: 600px;
 }
