--- a/footer.css
+++ b/footer.css
@@ -1,6 +1,7 @@
 .foot-main-container {
 width: 100%;
-padding: 20px;
+height: 10%;
+ipadding: 20px;
 background-color: black;
 display: flex;
 flex-direction: row;
@@ -11,7 +12,7 @@ align-items: center;
 .text {
 font-family: arial, sans-serif;
 color: grey;
-font-size: 10px;
+font-size: 30%;
 }
 
 #cashew_white {
