--- a/header_out.css
+++ b/header_out.css
@@ -1,26 +1,35 @@
 .head-container {
-display: flex;
-flex-direction: row;
-flex-wrap: wrap;
-justify-content: space-around;
-align-items: center;
-max-width: 100%;
-width: 1100px;
-margin: 0 auto;
-padding-top: 10px;
-ibackground-color: blue;
+idisplay: flex;
+iflex-direction: row;
+iflex-wrap: wrap;
+ijustify-content: space-around;
+ialign-items: center;
+imax-width: 100%;
+width: 100%;
+height: 10%;
+imargin: 0 auto;
+ipadding-top: 10px;
+background-color: blue;
 }
 
 .logo {
 position: relative;
-right: 59px;
+left: 10%;
+width: 0;
+}
+
+#imglogo {
+height: 100%;
 }
 
 .navi {
-display: flex;
-align-items: flex-start;
-justify-content: flex-end;
-margin-top: 50px;
+position: relative;
+bottom: 30%;
+
+idisplay: flex;
+ialign-items: flex-start;
+ijustify-content: flex-end;
+imargin-top: 50px;
 ibackground-color: yellow;
 }
 
@@ -31,8 +40,14 @@ color: grey;
 
 .dropdown {
 position: relative;
-top: -3px;
-left: 59px;
+itop: -3px;
+left: 88%;
+background-color: yellow;
+width: 0;
+}
+
+.dropbtn {
+height: 30%;
 }
 
 .dropdown-content {
