--- a/header_out.css
+++ b/header_out.css
@@ -6,7 +6,7 @@ ijustify-content: space-around;
 ialign-items: center;
 imax-width: 100%;
 width: 100%;
-height: 10%;
+height: 70px;
 imargin: 0 auto;
 ipadding-top: 10px;
 background-color: blue;
