--- a/footer.css
+++ b/footer.css
@@ -1,7 +1,6 @@
 .foot-main-container {
 width: 100%;
 height: 70px;
-ipadding: 20px;
 background-color: black;
 display: flex;
 flex-direction: row;
@@ -12,12 +11,13 @@ align-items: center;
 .text {
 font-family: arial, sans-serif;
 color: grey;
-font-size: 30%;
+font-size: 10px;
 }
 
 #cashew_white {
+height: 10px;
 position: relative;
 bottom: -1px;
-padding-right: 2px;
-padding-left: 3px;
+padding-right: 3px;
+padding-left: 4px;
 }
