--- a/header_out.css
+++ b/header_out.css
@@ -1,24 +1,33 @@
 .header-container {
 width: 100%;
 height: 70px;
-background-color: blue;
+ibackground-color: blue;
 }
 
-#header_logo {
-height: 100%;
+.logo {
 position: relative;
 left: 50px;
 }
 
+#header_logo {
+height: 100%;
+}
+
 .navi {
-iposition: relative;
-ibottom: 30%;
-background-color: lightgray;
+position: relative;
+ileft: calc(100% - 317px);
+bottom: 26%;
+iwidth: 0px;
+itext-align: right;
+ibackground-color: lightgray;
 }
 
 #outmenu {
+position: relative;
+left: calc(100% - 275px);
 display: inline-block;
 vertical-align: top;
+ibackground-color: green;
 }
 
 #outmenu a {
@@ -34,17 +43,23 @@ color: black;
 }
 
 #h_history, #h_analytics {
-padding-left: 30px;
+padding-left: 15px;
 }
 
-.header-dropdown {
-display: inline-block;
-vertical-align: top;
-iposition: relative;
-ileft: calc(100% - 100px);
-itop: -18px;
+.out-dropdown {
+width: 50px;
+position: relative;
+left: calc(100% - 100px);
+ibackground-color: green;
 text-align: right;
-background-color: green;
+}
+
+.in-dropdown {
+width: 21px;
+position: relative;
+left: calc(100% - 71px);
+top: -18px;
+ibackground-color: green;
 }
 
 .dropbtn {
@@ -52,12 +67,16 @@ height: 30%;
 }
 
 .dropdown-content {
-idisplay: none;
+display: none;
 text-align: right;
-background-color: yellow;
+ibackground-color: yellow;
 }
 
-.header-dropdown:hover .dropdown-content {
+.out-dropdown:hover .dropdown-content {
+display: block;
+}
+
+.in-dropdown:hover .dropdown-content {
 display: block;
 }
 
@@ -70,8 +89,15 @@ text-decoration: none;
 font-size: 12px;
 }
 
+#logoutform {
+height: 5px;
+position: relative;
+right: 30px;
+}
+
 #logoutform input {
 padding-right: 0px;
+padding-left: 0px;
 text-decoration: none;
 font-size: 12px;
 border-width: 0px;
