--- a/header_in.css
+++ b/header_in.css
@@ -1,69 +1,96 @@
-/*
-.hi-container {
+.header-container {
 width: 100%;
 height: 70px;
 ibackground-color: blue;
 }
 
-#hi_logo {
+.logo {
 height: 100%;
-position: relative;
-left: 50px;
+width: 117px;
+margin-left: 50px;
+ibackground-color: gray;
 }
 
-.hi-navi {
+#header_logo {
+height: 100%;
+}
+
+.navi {
 position: relative;
-bottom: 30%;
+bottom: 26%;
+ibackground-color: lightgray;
+}
+
+#outmenu {
+position: relative;
+left: calc(100% - 275px);
+display: inline-block;
+vertical-align: top;
+ibackground-color: green;
+}
+
+#outmenu a {
+position: relative;
+font-family: arial, sans-serif;
+color: grey;
+text-decoration: none;
+font-size: 12px;
+}
+
+#outmenu a:hover {
+color: black;
+}
+
+#history, #analytics {
+padding-left: 15px;
+}
+
+.in-dropdown {
+width: 21px;
+position: relative;
+left: calc(100% - 71px);
+top: -18px;
+ibackground-color: green;
+}
+
+.dropbtn {
+height: 21px;
+}
+
+.dropdown-content {
+display: none;
+text-align: right;
 ibackground-color: yellow;
 }
 
-.hi-navi a, #hi_logout{
+.in-dropdown:hover .dropdown-content {
+display: block;
+}
+
+.inmenu {
 font-family: arial, sans-serif;
 color: grey;
+padding-top: 10px;
+display: block;
+text-decoration: none;
+font-size: 12px;
 }
 
-#hi_history, #hi_analytics, .hi-dropdown {
-padding-left: 30px;
-}
-
-.hi-dropdown {
+#logoutform {
+height: 5px;
 position: relative;
-left: calc(100% - 100px);
-width: 50px;
-text-align: right;
-background-color: green;
+right: 30px;
 }
 
-.hi-dropbtn {
-height: 30%;
-}*/
-/*
-.hi-dropdown-content {
-display: none;
-}
-
-#hi_logout {
-position: relative;
-right: 36px;
+#logoutform input {
+padding-right: 0px;
+padding-left: 0px;
 text-decoration: none;
 font-size: 12px;
 border-width: 0px;
 background-color: white;
 }
 
-.hi-dropdown:hover .hi-dropdown-content {
-display: block;
-}
-
-.hi-navi a:link {
-text-decoration: none;
-font-size: 12px;
-}
-
-.hi-navi a:hover {
+.inmenu:hover {
 color: black;
 }
-/*
-#hi_logout:hover {
-color: black;
-}*/
