--- a/history.css
+++ b/history.css
@@ -1,13 +1,18 @@
-#firstmsg {
+html, body {
+height: 98.6%;
+}
+
+.msg-container {
+height: calc(100% - 140px);
+min-height: 300px;
 display: flex;
 flex-direction: column;
 justify-content: center;
 align-items: center;
-padding-top: 70px;
-padding-bottom: 70px;
+ibackground-color: pink;
 }
 
-#addmessage, #welmessage {
+#addmessage {
 font-family: arial;
 font-size: 14px;
 color: grey;
@@ -16,9 +21,11 @@ color: grey;
 #addmessage:hover {
 color: black;
 }
+
 .table-container {
+min-height: calc(100% - 340px);
 padding-top: 100px;
-padding-bottom: 150px;
+padding-bottom: 100px;
 display: flex;
 flex-direction: column;
 justify-content: center;
