d49: analytics height re-style

--- a/signup.css
+++ b/signup.css
@@ -1,6 +1,6 @@
 .signup-container {
 height: calc(100% - 140px);
-min-height: 350px;
+min-height: 405px;
 display: flex;
 justify-content: center;
 align-items: center;
@@ -8,7 +8,7 @@ ibackground-color: blue;
 }
 
 #signform {
-height: 185px;
+height: 242px;
 font-family: arial, sans-serif;
 color: black;
 position: relative;
@@ -19,7 +19,7 @@ align-items: center;
 ibackground-color: pink;
 }
 
-#signform input {
+#signform input, select, option {
 height: 35px;
 -webkit-appearance: none;
 text-align: center;
@@ -41,10 +41,16 @@ position: relative;
 top: 20px;
 }
 
+#sign_account {
+width: 200px;
+position: relative;
+top: 40px;
+}
+
 #sign_submit {
 width: 90px;
 position: relative;
-top: 80px;
+top: 100px;
 border-color: grey;
 border-width: 2px;
 }
