--- a/header_in.css
+++ b/header_in.css
@@ -46,9 +46,10 @@ padding-left: 15px;
 }
 
 .in-dropdown {
-width: 21px;
+width: 50px;
 position: relative;
-left: calc(100% - 71px);
+left: calc(100% - 100px);
+text-align: right;
 top: -18px;
 ibackground-color: green;
 }
@@ -79,7 +80,7 @@ font-size: 12px;
 #logoutform {
 height: 5px;
 position: relative;
-right: 30px;
+right: 0px;
 }
 
 #logoutform input {
