d56: gym access/ 'routes' enable activate-inactivate button

--- a/routes.css
+++ b/routes.css
@@ -60,6 +60,10 @@ tr:nth-child(even) {
 background-color: #dddddd;
 }
 
-td input {
-height: 20px;
+#actbutt {
+height: 15px;
+}
+
+#rembutt {
+height: 15px;
 }
