--- a/routes.css
+++ b/routes.css
@@ -33,9 +33,33 @@ align-items: center;
 ibackground-color: blue;
 }
 
+#disp-div {
+width: 400px;
+height: 50px;
+display: flex;
+flex-direction: column;
+align-items: flex-end;
+ibackground-color: lightgrey;
+}
+
 #disp-button {
 height: 30px;
+color: white;
+background-color: black;
+-webkit-appearance: none;
+text-align: center;
+font-size: 10px;
+border-width: 0px;
+padding: 10px;
+iborder-style: solid;
+iborder-radius: 20px;
+iborder-color: lightgrey;
 }
+
+#disp-button:hover {
+color: black;
+background-color: lightgray;
+}    
 
 table {
 font-family: arial, sans-serif;
