d65: gym access/ in the 'add' page create button to redirect to 'gyms' page to select a gym from the menu

--- a/footer.css
+++ b/footer.css
@@ -10,7 +10,8 @@ align-items: center;
 
 .text {
 font-family: arial, sans-serif;
-color: grey;
+color: lightgrey;
+font-style: italic;
 font-size: 10px;
 }
 
