--- a/add.css
+++ b/add.css
@@ -4,12 +4,43 @@ height: 98.6%;
 
 .add-container {
 height: calc(100% - 140px);
-min-height: 405px;
+min-height: 455px;
 display: flex;
+flex-direction: column;
 justify-content: center;
 align-items: center;
 ibackground-color: blue;
 }
+
+#change-div {
+width: 202px;
+height: 50px;
+display: flex;
+flex-direction: column;
+align-items: flex-end;
+ibackground-color: lightgrey;
+}
+    
+#change-button {
+width: 200px;
+height: 30px;
+color: white;
+background-color: black;
+-webkit-appearance: none;
+text-align: center;
+font-style: italic;
+font-size: 10px;
+border-width: 0px;
+padding: 10px;
+border-style: solid;
+border-radius: 20px;
+border-color: lightgrey;
+}
+    
+#change-button:hover {
+color: black;
+background-color: lightgray;
+}    
 
 #addform {
 height: 242px;
