d76: Change the display and style of 'analytics' page to be congruent to the 'dashboard' page: move the 'totals' row to the top, change color of fonts, change order of columns

--- a/analytics.css
+++ b/analytics.css
@@ -48,6 +48,11 @@ text-align: center;
 padding: 8px;
 }
 
+#analyt-totals {
+background-color: black;
+color: white;
+}
+
 .analytics-row {
 padding: 13px;
 }
